<resources>
    <string name="_00_00">00:00</string>
    <string name="_1_enter_mobile_number_in_the_provided_field">1. Enter mobile number in the provided field.</string>
    <string name="_2_click_the_whatsapp_button_if_installed_or_the_wb_whatsapp_button_if_whatsapp_business_is_installed_to_initiate_a_chat">2. Click the WhatsApp button if installed or the WB WhatsApp button if WhatsApp Business is installed to initiate a chat.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all_or_any_permissions_not_granted">All or any permissions not granted!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">XVid HD Video Downloader</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="browse_videos_with_the_built_in_browse">Browse videos with the built-in browse</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="res_0x7f130034_com_google_firebase_crashlytics_mapping_file_id">19de74f24b084cc494c7cec025874a4b</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="continue_">Continue</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="delete">Delete</string>
    <string name="delete_alert">Deleting file?</string>
    <string name="delete_description">Are you sure to delete this file permanently from device?\nThis action cannot be undo!</string>
    <string name="description">Please Enter Mobile number</string>
    <string name="disconnected">Disconnected</string>
    <string name="dismiss">Dismiss</string>
    <string name="download">Download</string>
    <string name="entr_num">Enter Phone Number</string>
    <string name="error">Enter Appropriate Mobile number</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_in_parsing_url">Error in parsing url</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Enable shuffle mode</string>
    <string name="exo_controls_shuffle_on_description">Disable shuffle mode</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="go_to_the_website">Video Downloader</string>
    <string name="how_to_use">How to Use</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="parsing_url">Parsing url…</string>
    <string name="select_video_quaility">Select Video Quality</string>
</resources>