<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/main" android:background="@drawable/start_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:layout_weight="1">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/start_img_1"/>
            <TextView android:textSize="@dimen/_14sdp" android:textColor="@color/button_color1" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_15sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_15sdp" android:text="@string/go_to_the_website" android:includeFontPadding="false" android:fontFamily="@font/poppins_semibold" android:layout_marginHorizontal="@dimen/_15sdp"/>
            <TextView android:textSize="@dimen/_10sdp" android:textColor="#99000000" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20sdp" android:layout_marginTop="@dimen/_2sdp" android:layout_marginRight="@dimen/_20sdp" android:text="@string/browse_videos_with_the_built_in_browse" android:includeFontPadding="false" android:fontFamily="@font/poppins_regular" android:layout_marginHorizontal="@dimen/_20sdp"/>
            <include layout="@layout/layout_shimmer_native_ads_full"/>
            <TextView android:textSize="@dimen/_13sdp" android:textColor="@color/white" android:gravity="center" android:id="@+id/iv_next" android:background="@drawable/bg_button" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp" android:layout_marginBottom="@dimen/_15sdp" android:text="@string/next" android:includeFontPadding="false" android:fontFamily="@font/poppins_semibold" android:layout_marginHorizontal="@dimen/_10sdp" android:paddingVertical="@dimen/_10sdp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
