<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/bottomSheeet" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/content_constrainlayout" android:padding="16dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="160dp" android:layout_height="100dp">
                <androidx.cardview.widget.CardView android:id="@+id/cardviewThumbnail" android:layout_width="160dp" android:layout_height="100dp" app:cardCornerRadius="@dimen/_8sdp" app:cardElevation="3dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
                    <ImageView android:id="@+id/imgthumbnailBottom" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>
                <TextView android:textColor="@color/white" android:id="@+id/tvduration" android:padding="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_00_00" android:includeFontPadding="false" android:layout_alignParentBottom="true" android:fontFamily="@font/poppins_semibold" android:layout_alignParentEnd="true" android:elevation="8dp"/>
            </RelativeLayout>
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/black" android:ellipsize="end" android:id="@+id/textView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:maxLines="3" android:includeFontPadding="false" android:fontFamily="@font/poppins_medium" android:layout_marginStart="16dp"/>
                <TextView android:textColor="#aeaeae" android:id="@+id/tvVideoResol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/loading" android:includeFontPadding="false" android:fontFamily="@font/poppins_medium" android:layout_marginStart="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:id="@+id/textView2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/select_video_quaility" app:layout_constraintStart_toStartOf="@+id/cardviewThumbnail" app:layout_constraintTop_toBottomOf="@+id/cardviewThumbnail" style="@style/TextAppearance.Material3.TitleSmall"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout" android:layout_width="match_parent" android:layout_height="@dimen/_170sdp" android:layout_marginTop="16dp">
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/downloadable_recylerview" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="150dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_10sdp">
            <TextView android:textSize="@dimen/_11sdp" android:textColor="@color/black" android:gravity="center" android:id="@+id/closeBotomSheet" android:background="@drawable/button_bg" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_5sdp" android:layout_marginRight="@dimen/_5sdp" android:text="Cancel" android:includeFontPadding="false" android:layout_weight="1" android:fontFamily="@font/poppins_medium" android:backgroundTint="#f2f2f2" android:layout_marginHorizontal="@dimen/_5sdp" android:paddingVertical="@dimen/_10sdp"/>
            <TextView android:textSize="@dimen/_11sdp" android:textColor="@color/white" android:gravity="center" android:id="@+id/downloadBtn" android:background="@drawable/button_bg" android:paddingTop="@dimen/_10sdp" android:paddingBottom="@dimen/_10sdp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_5sdp" android:layout_marginRight="@dimen/_5sdp" android:text="Download" android:includeFontPadding="false" android:layout_weight="1" android:fontFamily="@font/poppins_medium" android:layout_marginHorizontal="@dimen/_5sdp" android:paddingVertical="@dimen/_10sdp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_30sdp" android:layout_marginBottom="@dimen/_30sdp" android:layout_marginVertical="@dimen/_30sdp">
        <ProgressBar android:id="@+id/pb_bottomsheet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateTint="@color/app_color" style="?android:attr/progressBarStyle"/>
        <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/black" android:gravity="start|center_vertical" android:layout_gravity="center_vertical" android:id="@+id/pb_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/parsing_url" android:includeFontPadding="false" android:fontFamily="@font/poppins_medium" android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>
